# LLM-graph-framework

./: .gitignore  Dockerfile  README.md  cli.py  conftest.py  docker-compose.yml  index.html  pyproject.toml  script.js  start.sh  style.css
app/: main.py
app/api/: router.py
app/core/: config.py  exceptions.py  limiter.py  prompts.py
app/db/repositories/: graph_repository.py
app/models/: graph.py  prompt.py
app/services/: ai_response_parser.py  ai_service.py  graph_service.py  prompt_service.py
frontend/: index.html  script.js  style.css
tests/: test_ai_response_parser.py  test_ai_service_utils.py  test_health_endpoints.py  test_idempotent_route.py
